Updated Ingradient list UI

--- a/src/app/recipe-list/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail.component.html
@@ -22,7 +22,7 @@
 <div class="row">
   <div class="col-xs-12">
    <ul *ngFor="let i of selectedRecipe?.ingradients" class="list-group">
-     <li class="list-group-item">({{i.name}}) ({{i.ammount}})</li>
+     <li >{{i.name}} ({{i.ammount}})</li>
    </ul>
   </div>
 </div>
