changed ingradients list styles

--- a/src/app/recipe-list/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail.component.html
@@ -21,8 +21,8 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-   <ul *ngFor="let i of selectedRecipe?.ingradients" class="list-group">
-     <li >{{i.name}} ({{i.ammount}})</li>
+   <ul *ngFor="let i of selectedRecipe?.ingradients" >
+     <li class="list-group-item" >{{i.name}} ({{i.ammount}})</li>
    </ul>
   </div>
 </div>
