fixed child routing

--- a/src/app/recipe-list/recipe-item.component.html
+++ b/src/app/recipe-list/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="[recipe.name]" class="list-group-item clearfix row">
+<a  class="list-group-item clearfix row">
   <div class="pull-left ">
     <h4 class="list-group-item-heading">{{recipe.name}}</h4>
     <p class="list-group-item-text">{{recipe.description}}</p>
