--- a/src/app/recipe-root.component.html
+++ b/src/app/recipe-root.component.html
@@ -8,7 +8,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a [routerLink]="['recipe-list']">Recipes</a></li>
+        <li><a >Recipes</a></li>
         <li><a href="#">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
