Added 'new' 'edit' recipe child routes.

--- a/src/app/recipe-list/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="col-xs-12">
     <button class="btn btn-success">To Shopping List</button>
-    <button class="btn btn-primary">Edit</button>
+    <button class="btn btn-primary" (click)="edit()">Edit</button>
     <button class="btn btn-danger" (click)="delete()">Delete</button>
   </div>
 </div>
