--- a/src/app/recipe-root.component.html
+++ b/src/app/recipe-root.component.html
@@ -8,6 +8,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+        <li><a [routerLink]="['new']">New Recipe</a></li>
         <li><a [routerLink]="['recipe-list']">Recipes</a></li>
         <li><a href="#">Shopping List</a></li>
       </ul>
@@ -22,6 +23,8 @@
           </ul>
         </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
 </nav>
