--- a/src/app/edit-recipe/edit-recipe.component.html
+++ b/src/app/edit-recipe/edit-recipe.component.html
@@ -2,11 +2,11 @@
     <form #f="ngForm" (ngSubmit)="onSubmit(f)">
         <div class="form-group">
             <span for="recipeName">Recipe Name</span>
-            <input type="text" class="form-control" id="recipeName" placeholder="Enter recipe name" name="recipeName" required ngModel>
+            <input type="text" class="form-control" id="recipeName" [placeholder]="this.fields?.name" name="recipeName" required ngModel>
         </div>
         <div class="form-group">
             <span for="recipeDecription">Desciption</span>
-            <input type="text" class="form-control" id="recipeDescription" placeholder="Recipe description" name="recipeDesc" required
+            <input type="text" class="form-control" id="recipeDescription" [placeholder]="this.fields?.description" name="recipeDesc" required
                 ngModel>
         </div>
         <div class="form-group">
