--- a/src/app/new-recipe/new-recipe.component.html
+++ b/src/app/new-recipe/new-recipe.component.html
@@ -2,12 +2,13 @@
     <form #f="ngForm" (ngSubmit)="onSubmit(f)">
         <div class="form-group">
             <span for="recipeName">Recipe Name</span>
-            <input type="text" class="form-control" id="recipeName" placeholder="Enter recipe name" name="recipeName" required ngModel>
+            <input type="text" class="form-control" id="recipeName" placeholder="Enter recipe name" 
+            name="recipeName" required ngModel>
         </div>
         <div class="form-group">
             <span for="recipeDecription">Desciption</span>
-            <input type="text" class="form-control" id="recipeDescription" placeholder="Recipe description" name="recipeDesc" required
-                ngModel>
+            <input type="text" class="form-control" id="recipeDescription" placeholder="Recipe description"
+             name="recipeDesc" required ngModel>
         </div>
         <div class="form-group">
             <span for="imagePath">Photo</span>
