--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-4">
-    <ul class="list-group" *ngFor="let recipe of recipes">
+    <ul class="list-group active" *ngFor="let recipe of recipes">
       <rb-recipe-item [recipe]="recipe"  (click)="onSelected(recipe)"></rb-recipe-item>
     </ul>
   </div>
