--- a/src/app/recipe-root.component.html
+++ b/src/app/recipe-root.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Recipe Book</a>
+      <a class="navbar-brand" href="">Recipe Book</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -10,7 +10,7 @@
       <ul class="nav navbar-nav">
         <li><a [routerLink]="['new']">New Recipe</a></li>
         <li><a [routerLink]="['recipe-list']">Recipes</a></li>
-        <li><a href="#">Shopping List</a></li>
+        <li><a >Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" rbDropdown>
