--- a/src/app/recipe-list/recipe-item.component.html
+++ b/src/app/recipe-list/recipe-item.component.html
@@ -1,22 +1,16 @@
-<a  class="list-group-item clearfix row">
-  <div class="pull-left ">
-    <h4 class="list-group-item-heading">{{recipe.name}}</h4>
-    <p class="list-group-item-text">{{recipe.description}}</p>
-  </div>
+<a class="list-group-item clearfix">
   <div class="row">
-    <div class="col-md-11">
-      <span class="pull-right">
+    <div class="col-md-8">
+      <div class="pull-left ">
+        <h4 class="list-group-item-heading">{{recipe.name}}</h4>
+        <p class="list-group-item-text">{{recipe.description}}</p>
+      </div>
+    </div>
+    <div class="col-md-4"> <span class="pull-right">
       <img class="img-responsive"
            src="{{recipe.imagePath}}"
            style="max-height: 50px;"/>
            </span>
     </div>
-    <div class="col-md-1">
-      <a href="#">
-        <span class="pull-right glyphicon glyphicon-remove"></span>
-      </a>
-    </div>
-
   </div>
-
 </a>
