Refactorednew Recipe  UI & retouched styles

--- a/src/app/recipe-list/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail.component.html
@@ -1,28 +1,29 @@
-<div class="row">
-  <div class="col-xs-12">
-    <img src="{{selectedRecipe?.imagePath}}" alt="" class="img-responsive" (click)="detailClicked()">
+<div class="container fluid">
+  <div class="row">
+    <div class="col-xs-12">
+      <img src="{{selectedRecipe?.imagePath}}" alt="" class="img-responsive" (click)="detailClicked()">
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <h1>{{selectedRecipe?.name}}</h1>
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>{{selectedRecipe?.name}}</h1>
+    </div>
+    <div class="col-xs-12">
+      <button class="btn btn-success">To Shopping List</button>
+      <button class="btn btn-primary" (click)="edit()">Edit</button>
+      <button class="btn btn-danger" (click)="delete()">Delete</button>
+    </div>
   </div>
-  <div class="col-xs-12">
-    <button class="btn btn-success">To Shopping List</button>
-    <button class="btn btn-primary" (click)="edit()">Edit</button>
-    <button class="btn btn-danger" (click)="delete()">Delete</button>
+  <div class="row">
+    <div class="col-xs-6">
+      <p>{{selectedRecipe?.description}}</p>
+    </div>
   </div>
-</div>
-<hr>
-<div class="row">
-  <div class="col-xs-12">
-    <p>{{selectedRecipe?.description}}</p>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-   <ul *ngFor="let i of selectedRecipe?.ingradients" >
-     <li class="list-group-item" >{{i.name}} ({{i.ammount}})</li>
-   </ul>
+  <div class="row">
+    <div class="col-xs-6">
+      <div *ngFor="let i of selectedRecipe?.ingradients">
+        <div class="list-group-item">{{i.name}} ({{i.ammount}})</div>
+      </div>
+    </div>
   </div>
 </div>
