--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,10 +1,14 @@
-<div class="row">
-  <div class="col-xs-4">
-    <ul class="list-group active" *ngFor="let recipe of recipes">
-      <rb-recipe-item [recipe]="recipe"  (click)="onSelected(recipe)"></rb-recipe-item>
-    </ul>
-  </div>
-  <div class="col-xs-8">
-    <router-outlet></router-outlet>
+<div class="container">
+  <button class="btn btn-success" (click)="onAddRecipe()">Add Recipe</button>
+
+  <div class="row">
+    <div class="col-xs-5">
+      <ul class="list-group active" *ngFor="let recipe of recipes">
+        <rb-recipe-item [recipe]="recipe" (click)="onSelected(recipe)"></rb-recipe-item>
+      </ul>
+    </div>
+    <div class="col-xs-7">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
