--- a/src/app/recipe-root.component.html
+++ b/src/app/recipe-root.component.html
@@ -15,7 +15,7 @@
         <li class="dropdown" rbDropdown>
           <a  class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a>Login</a></li>
+            <li><a [routerLink]="['signin']">Login</a></li>
             <li><a >Other</a></li>
             <li role="separator" class="divider"></li>
             <li><a >Logout</a></li>
