--- a/src/app/users/login-user.component.html
+++ b/src/app/users/login-user.component.html
@@ -1,15 +1,22 @@
 <div class="row">
-  <div class="col-md-4"></div>
-  <div class="col-md-4">
-    <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png">
-    <p id="profile-name" class="profile-name-card"></p>
+  <div class="col-md-4  col-md-offset-4 ">
+    <div class="form-group row">
+      <img id="profile-img" class="img-responsive center-block profile-img-card" src='../../assets/recipe-book-login.png'>
+      <p id="profile-name" class="profile-name-card"></p>
+    </div>
+
     <form class="form-signin" #f="ngForm" (ngSubmit)="onLoginInUser(f)">
-      <span id="reauth-email" class="reauth-email"></span>
-      <input type="email" id="inputEmail" class="form-control" name="email" placeholder="Email address" required="" autofocus="" ngModel>
-      <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required="" ngModel>
-      <hr>
-      <button class="btn btn-lg btn-primary  btn-signin" type="submit">Sign in</button>
+      <div class="form-group row">
+        <span id="reauth-email" class="reauth-email"></span>
+        <input type="email" id="inputEmail" class="form-control" name="email" placeholder="Email address" required="" autofocus=""
+          ngModel>
+      </div>
+      <div class="form-group row">
+        <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required="" ngModel>
+      </div>
+      <div class="form-group row">
+        <button class="btn btn-primary form-control" type="submit">Sign in</button>
+      </div>
     </form>
   </div>
-  <div class="col-md-4"></div>
 </div>
