--- a/src/app/recipe-root.component.html
+++ b/src/app/recipe-root.component.html
@@ -9,21 +9,20 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a [routerLink]="['recipe-list']">Recipes</a></li>
-        <li><a >Shopping List</a></li>
+        <li><a>Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" rbDropdown>
-          <a  class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
+          <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a [routerLink]="['signin']">Login</a></li>
-            <li><a >Other</a></li>
+            <li><a>Register</a></li>
             <li role="separator" class="divider"></li>
-            <li><a >Logout</a></li>
+            <li><a>Logout</a></li>
           </ul>
         </li>
       </ul>
     </div>
-    <!-- /.navbar-collapse -->
   </div>
   <!-- /.container-fluid -->
 </nav>
