--- a/src/app/recipe-root.component.html
+++ b/src/app/recipe-root.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="">Recipe Book</a>
+      <a class="navbar-brand" [routerLink]="['recipe-list']">Recipe Book</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
