--- a/src/app/recipe-root.component.html
+++ b/src/app/recipe-root.component.html
@@ -13,7 +13,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a>{{userEmail | async}}</a></li>
+        <li rbHighlightLink><a >{{userEmail | async}}</a></li>
         <li class="dropdown" rbDropdown>
           <a class="dropdown-toggle" rbHighlightLink role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
           <ul class="dropdown-menu">
