--- a/src/app/recipe-root.component.html
+++ b/src/app/recipe-root.component.html
@@ -1,19 +1,20 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
+<nav class="navbar navbar-default  navbar-fixed-top">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     <div class="navbar-header">
       <a class="navbar-brand" [routerLink]="['recipe-list']">Recipe Book</a>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="divider-vertical " rbHighlightLink><a [routerLink]="['recipe-list']">Recipes</a></li>
-        <li class="divider-vertical " rbHighlightLink><a>Shopping List</a></li>
-      </ul>
-
+  </div>
+  <div class="navbar-collapse collapse in">
+    <ul class="nav navbar-nav">
+      <li class="divider-vertical " rbHighlightLink><a [routerLink]="['recipe-list']">Recipes</a></li>
+      <li class="divider-vertical " rbHighlightLink><a>Shopping List</a></li>
       <ul class="nav navbar-nav navbar-right">
-        <li rbHighlightLink><a >{{userEmail | async}}</a></li>
+        <li rbHighlightLink><a>{{userEmail | async}}</a></li>
         <li class="dropdown" rbDropdown>
           <a class="dropdown-toggle" rbHighlightLink role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -24,7 +25,9 @@
           </ul>
         </li>
       </ul>
-    </div>
+    </ul>
   </div>
-  <!-- /.container-fluid -->
 </nav>
+
+
+
