--- a/src/app/users/login-user.component.html
+++ b/src/app/users/login-user.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4  col-md-offset-4 ">
+  <div class="col-md-4 col-xs-4 col-md-offset-4 col-xs-offset-4">
     <div class="form-group row">
       <img id="profile-img" class="img-responsive center-block profile-img-card" src='../../assets/recipe-book-login.png'>
       <p id="profile-name" class="profile-name-card"></p>
