--- a/src/app/users/signup-user.component.html
+++ b/src/app/users/signup-user.component.html
@@ -1,19 +1,19 @@
 <div class="row">
-  <div class="col-md-4  col-md-offset-4  centered-text">
+  <div class="col-md-4 col-xs-4  col-md-offset-4 col-xs-offset-4  centered-text">
     <legend>
       <a><img src='../../assets/user-signup.png' style="height: 35px;width: 35px" /></a> Sign up!</legend>
     <form action="#" method="post" class="form" role="form" (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 col-xs-12">
           <input class="form-control" name="email" placeholder="Your Email" type="email" ngModel>
         </div>
       </div>
       <br>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-xs-6">
           <input class="form-control" name="password" placeholder="New Password" type="password" ngModel>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-xs-6">
           <input class="form-control" name="password1" placeholder="Reenter Password" type="password" ngModel>
         </div>
       </div>
