--- a/src/app/users/signup-user.component.html
+++ b/src/app/users/signup-user.component.html
@@ -2,24 +2,24 @@
   <div class="col-md-4 col-xs-4  col-md-offset-4 col-xs-offset-4  centered-text">
     <legend>
       <a><img src='../../assets/user-signup.png' style="height: 35px;width: 35px" /></a> Sign up!</legend>
-    <form action="#" method="post" class="form" role="form" (ngSubmit)="onSubmit(f)" #f="ngForm">
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-md-12 col-xs-12">
-          <input class="form-control" name="email" placeholder="Your Email" type="email" ngModel>
+          <input class="form-control" name="email" placeholder="Your Email" type="email" ngModel required>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-6 col-xs-6">
-          <input class="form-control" name="password" placeholder="New Password" type="password" ngModel>
+          <input class="form-control" name="password" placeholder="New Password" type="password" ngModel required>
         </div>
         <div class="col-md-6 col-xs-6">
-          <input class="form-control" name="password1" placeholder="Reenter Password" type="password" ngModel>
+          <input class="form-control" name="password1" placeholder="Reenter Password" type="password" ngModel required>
         </div>
       </div>
+      <br> 
       <br>
-      <br>
-      <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="f.valid">Sign up</button>
+      <button class="btn btn-lg btn-primary btn-block" type="submit" disabled="f.invalid">Sign up</button>
     </form>
   </div>
 </div>
