--- a/src/app/users/login-user.component.html
+++ b/src/app/users/login-user.component.html
@@ -15,7 +15,7 @@
         <input type="password" id="inputPassword"  class="form-control" name="password" placeholder="Password" required="" ngModel>
       </div>
       <div class="form-group row">
-        <button class="btn btn-primary form-control" type="submit">Sign in</button>
+        <button class="btn btn-primary form-control" [disabled]="f.invalid" type="submit">Sign in</button>
       </div>
     </form>
   </div>
